--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -10,9 +10,9 @@
     "test:coverage:json": "nyc --all --reporter=json-summary npm run test",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "prestart": "npm run build && npm run db:reset",
-    "start": "node .",
+    "start": "ts-node .",
     "predev": "npm run build && npm run db:reset",
-    "dev": "ts-node ./src/server.ts",
+    "dev": "ts-node-dev ./src/server.ts",
     "postinstall": "if [ ! -z 'cat ./packages.npm' ]; then npm i --ignore-scripts $(cat ./packages.npm); fi",
     "lint": "eslint ./src --ext .ts"
   },
@@ -50,6 +50,8 @@
     "typescript": "4.4.4"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
