--- a/app/backend/tsconfig.json
+++ b/app/backend/tsconfig.json
@@ -18,6 +18,5 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/tests"]
+  "include": ["src/**/*", "src/routes/loginRoutes.ts"]
 }
